<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btn_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginVertical="5dp"
        android:text="@string/label_popular"
        android:textSize="20sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btn_upcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginVertical="5dp"
        android:text="@string/label_upcoming"
        android:textSize="20sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btn_top_rated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginVertical="5dp"
        android:text="@string/label_top_rated"
        android:textSize="20sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btn_now_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginVertical="5dp"
        android:text="@string/label_now_playing"
        android:textSize="20sp"
        android:textAllCaps="false"/>

</LinearLayout>