<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardElevation="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="110dp"
        android:layout_gravity="center_vertical"
        android:layout_height="160dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_title"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_release_date"
            android:textColor="@android:color/black"
            android:layout_marginVertical="5dp"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_loremipsum"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>

</androidx.cardview.widget.CardView>