<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.DetailMovieActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="@android:color/white">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="110dp"
                    android:layout_height="160dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_title"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_release_date"
                        android:textColor="@android:color/black"
                        android:layout_marginVertical="5dp"
                        android:textSize="15sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_overview"
                        android:textStyle="bold"
                        android:layout_marginVertical="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/tv_summary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_loremipsum"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"/>

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/tv_label_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_reviews"
                android:textStyle="bold"
                android:layout_marginVertical="5dp"
                android:layout_marginLeft="12dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <ProgressBar
                android:id="@+id/pbar_review"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginHorizontal="7dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/img_btn_fav"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_margin="8dp"
            android:visibility="gone"
            android:background="@drawable/ic_fav"/>

        <ImageButton
            android:id="@+id/img_btn_unfav"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_margin="8dp"
            android:background="@drawable/ic_unfav"/>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>